--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Giang Nguyen",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^6.2.1",
     "body-parser": "^1.18.2",
     "express": "^4.16.2"
   }
